--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation "androidx.biometric:biometric:1.0.1"
+
 }
 apply plugin: 'com.google.gms.google-services'
